textalign fix

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -639,6 +639,7 @@ h1 {
 .main_page_title {
   font-size: 70px;
   margin-bottom: 5px;
+  text-align: center;
 }
 
 .backgroundvideo{
@@ -661,6 +662,7 @@ h1 {
 
 .main_page_desc {
   margin-top: 0;
+  text-align: center;
 }
 
 .go_reg {
